--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -85,6 +85,62 @@
   </div>
 </div> -->
 
+<footer class="bg-light text-center mt-4">
+  <!-- Grid container -->
+  <div class="container p-3">
+    <!--Grid row-->
+    <div class="row">
+      <!--Grid column-->
+      <div class="col-md-6 text-dark">
+        <h5 class="mb-0 text-left" >Funding partners</h5>
+        <hr>  
+        <ul class="list-unstyled text-justify">
+            <li>The National Institutes of Health (NIH) Common Fund [NIH award number U2RTW010672].</li> 
+            <li>The UK Medical Research Council (MRC) and UK Department for International Development (DFID) 
+            that is under the MRC/DFID Concordat agreement and is also part of  EDCTP2 programme supported by the European Union.</li>
+            <li>The Bill and Melinda Gates Foundation [Investment ID INV-031335].</li>
+        </ul>
+      </div>
+      <!--Grid column-->
+      <div class="col-md-4 text-dark">
+        <h5 class="mb-0 text-left">Partner institutions</h5>
+        <hr>  
+        <ul class="list-unstyled text-left">
+          <li><a href="#">Uganda Virus Research Institute (UVRI)</a></li>   
+          <li><a href="#">MRC/UVRI and LSHTM</a></li>   
+          <li><a href="#">Makerere University-BRecA</a></li>          
+          <li><a href="#">H3ABioNet</a></li>    
+        </ul>
+      </div>
+      <!--Grid column-->
+      <div class="col-md-2 text-dark">
+        <h5 class="mb-0 text-left">Quick links</h5>
+        <hr>  
+        <ul class="list-unstyled text-left">
+          <li><a href="#">Home</a></li> 
+          <li><a href="#">Data upload</a></li> 
+          <li><a href="#">Data browser</a></li>    
+          <li><a href="#">Data Analysis</a></li>    
+          <li><a href="#">Analyses browser</a></li>    
+          <li><a href="#">Tutorial</a></li>       
+        </ul>
+      <!--Grid column-->
+    </div>
+  </div>
+
+  <!--Grid row-->
+  <div class="row">
+    <div class="col-md-12 text-dark">
+      <ul class="list-unstyled text-right">
+        <hr>
+        <li>Uganda Virus Research Institute &copy; <script>document.write(new Date().getFullYear())</script></li>
+      </ul>
+    </div>
+  </div>
+
+  </div>
+  <!-- Grid container -->
+</footer>
 </body>
 {% block js %}
 {% endblock %}
