--- a/templates/uploads/batch-upload-ngs.html
+++ b/templates/uploads/batch-upload-ngs.html
@@ -44,9 +44,9 @@
 <div class="mt-3 pt-3 p-4 shadow">
   <ul>
       <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> Download a template for sample data <a href="https://github.com/AlfredUg/hivseqdb-docker/raw/main/data/Santiago_Nicagura_2016.csv">here</a>.</p>
-      <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> HIVseqDB currently supports paired-end NGS data as compressed or un-compressed FASTQ files (.fastq, .fastq.gz, .fq, .fq.gz).</p>
+      <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> HIVseqDB currently supports paired-end NGS data ass un-compressed FASTQ files (.fastq, .fq).</p>
       <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> We recommed that FASTQ files be named as follows: <Strong>sampleName_1.fastq</Strong> and <Strong>sampleName_2.fastq</Strong> for forward and reverse reads respectively.</p>
-      <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> Sample names in the sample data file should match with sample names in the .fastq or fastq.gz file names.</p>    
+      <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> Sample names in the sample data file should match with sample names in the .fastq file names.</p>    
     </ul>
 </div>
 
