--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -120,13 +120,14 @@
 
 <div class="container-fluid"><br>
 
-  <!-- <div class="alert alert-info alert-dismissible fade show" role="alert">
-    <Strong>INFO:</Strong> This instance only allows browsing of already analysed data. To upload and analyse own data, kindly install an instance as indicated in the documentation    
+  <div class="alert alert-info alert-dismissible fade show" role="alert">
+    <Strong>Note:</Strong> Currently, this instance of HIVseqDB only allows browsing of already analysed data. 
+    Launching of analysis jobs on this instance will be enabled in the near future.
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-  </div> -->
-
+  </div>
+  
 {% block content %}
 {% endblock %}
 </div>
