--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -120,13 +120,22 @@
 
 <div class="container-fluid"><br>
 
-  <div class="alert alert-info alert-dismissible fade show" role="alert">
+  <!-- <div class="alert alert-info alert-dismissible fade show" role="alert">
     <Strong>Note:</Strong> Currently, this instance of HIVseqDB only allows browsing of already analysed data. 
     Launching of analysis jobs on this instance will be enabled in the near future.
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-  </div>
+  </div> -->
+
+  <!-- <div class="alert alert-info alert-dismissible fade show" role="alert">
+    The NGS data used in this demonstration is publically available at the NCBI Sequence Read Archive (SRA)
+    and the European Nucleotide Archive (ENA), Bioproject accession PRJNA340290.
+    Corresponding sample data was obtained from the associated publication. Many thanks to Avila-Ríos, Santiago, et al. "HIV drug resistance in antiretroviral treatment-naïve individuals in the largest public hospital in Nicaragua, 2011-2015." PLoS One 11.10 (2016): e0164156.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div> -->
   
 {% block content %}
 {% endblock %}
